# FlightSim

./: .gitignore  Dockerfile  README.md  flight_trajectory_A320-200_PEK-SZX.csv  flight_trajectory_A320-200_PVG-CKG.csv  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf_space.yml
data/: plans.csv  waypoints.csv
docs/: SDK_DESIGN.md
examples/: gradio_demo.py  simple_trajectory.py  trajectory_pek_lax_b777.csv  trajectory_pek_pvg_a320.csv
examples/notebooks/: test_flight.ipynb
src/flightsim/: __init__.py  aerodynamics.py  autopilot.py  data_generator.py  navigation.py  noise.py  sixdof.py
src/flightsim.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_core.py
tools/: generate_real_routes.py  visualize.py
