[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flightsim"
version = "1.0.0"
description = "A dynamic flight trajectory simulation library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "FlightSim Team" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "gradio",
]

[project.urls]
"Homepage" = "https://github.com/example/flightsim"

[tool.setuptools.packages.find]
where = ["src"]
